force-app/main/default/objects/Contact_Account_Relation__c/Contact_Account_Relation__c.object-meta.xml
<CustomObject>
    <label>Contact Account Relationship</label>
    <nameField>
        <displayFormat>CAR-{00000}</displayFormat>
        <label>Contact Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Account Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>