force-app/main/default/objects/Contact_Account_Relation__c/fields/Account_Name_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Address__c</fullName>
    <description>Used in Household creation flow for differentiating existing Households

Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <formula>HYPERLINK(&quot;/&quot; + Account__c , Account__r.Name + &quot; (&quot; + Account__r.BillingStreet + 
IF(NOT(ISBLANK(Account__r.BillingStreet)), &quot;, &quot;, &quot;&quot;) + 
Account__r.BillingCity + 
IF((NOT(ISBLANK(Account__r.BillingCity)) &amp;&amp; NOT(ISBLANK(Account__r.BillingState))), &quot;, &quot;, &quot;&quot;) + 
Account__r.BillingState + &quot;)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name &amp; Address</label>
    <type>Text</type>
</CustomField>