force-app/main/default/objects/Contact_Account_Relation__c/fields/Active_Formula__c.field-meta.xml
<CustomField>
    <fullName>Active_Formula__c</fullName>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <formula>Start_Date__c &lt;= TODAY() &amp;&amp; (ISBLANK(End_Date__c) || TODAY() &lt;= End_Date__c)
||
(ISBLANK(End_Date__c) &amp;&amp; ISBLANK(Start_Date__c))
||
(TODAY() &lt;= End_Date__c &amp;&amp; ISBLANK(Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated using the Start Date and End Date</inlineHelpText>
    <label>Active Formula</label>
    <type>Checkbox</type>
</CustomField>