force-app/main/default/objects/Contact_Account_Relation__c/fields/Contact_s_Relationship_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Relationship_to_Account__c</fullName>
    <inlineHelpText>Describes the way the Person is related to the Account

***If you add values to this picklist, you must also add them to the &quot;role&quot; Multi-select picklist on Account Contact Relationship object***

Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</inlineHelpText>
    <label>Contact&apos;s Relationship to Account</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Account_Relationship_Type</valueSetName>
    </valueSet>
</CustomField>