force-app/main/default/objects/Contact_Account_Relation__c/fields/Duplicate_Key__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Prevents multiple active relationships between the same person and company with the same relationship type.

Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <inlineHelpText>Auto-populated via Flow on active relationships to prevent duplicates.</inlineHelpText>
    <label>Duplicate Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>