force-app/main/default/objects/Contact_Account_Relation__c/fields/EDUtb_Account__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Account Relationships</relationshipLabel>
    <relationshipName>Custom_Account_Contact_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>