force-app/main/default/objects/Contact_Account_Relation__c/fields/EDUtb_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Account_Name__c</fullName>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <formula>EDUtb_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>