force-app/main/default/objects/Contact_Account_Relation__c/fields/EDUtb_Alumni__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Alumni__c</fullName>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <formula>EDUtb_Contact__r.EDUtb_Alumni__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alumni</label>
    <type>Checkbox</type>
</CustomField>