force-app/main/default/objects/Contact_Account_Relation__c/fields/EDUtb_Contact__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Contact associated with a Person Account. If needed, navigate to a different screen to create a new Person Account, and then the related Contact will be available for selection here.</errorMessage>
        <filterItems>
            <field>Contact.Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Account Relationships</relationshipLabel>
    <relationshipName>Account_Contact_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>