force-app/main/default/objects/Contact_Account_Relation__c/fields/EDUtb_Contact_Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Contact_Profile_Picture__c</fullName>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <formula>EDUtb_Contact__r.Account.EDUtb_Company_Logo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Profile Picture</label>
    <type>Text</type>
</CustomField>