force-app/main/default/objects/Contact_Account_Relation__c/fields/EDUtb_Current_Student__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Current_Student__c</fullName>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <formula>EDUtb_Contact__r.EDUtb_Current_Student__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Student</label>
    <type>Checkbox</type>
</CustomField>