force-app/main/default/objects/Contact_Account_Relation__c/fields/EDUtb_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_End_Date__c</fullName>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <inlineHelpText>First day that this CAR is considered inactive (ie if this set as Jan 3, then on Jan 2 the record will be active and on Jan 3 it will be inactive)</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>