force-app/main/default/objects/Contact_Account_Relation__c/fields/EDUtb_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Job_Title__c</fullName>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>