force-app/main/default/objects/Contact_Account_Relation__c/fields/EDUtb_Military_Service_Status__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Military_Service_Status__c</fullName>
    <description>Corresponds to and is populated by the MilitaryService field on the ContactProfile obj

Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <label>Military Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Duty</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Active Reserve</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Full time</fullName>
            </value>
            <value>
                <fullName>Part time</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>