force-app/main/default/objects/Contact_Account_Relation__c/fields/EDUtb_Person_Employment__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Person_Employment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>indicates related person employment created via automation. Populated via. automation.

Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <label>Person Employment</label>
    <referenceTo>PersonEmployment</referenceTo>
    <relationshipLabel>Contact Account Relationships</relationshipLabel>
    <relationshipName>Contact_Account_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>