force-app/main/default/objects/Contact_Account_Relation__c/fields/EDUtb_Primary_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Primary_Point_of_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <label>Primary Point of Contact</label>
    <type>Checkbox</type>
</CustomField>