force-app/main/default/objects/Contact_Account_Relation__c/fields/End_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Today__c</fullName>
    <description>Used as a conditional visibility filter for display text on the Lightning Record Page.</description>
    <formula>End_Date__c = TODAY()</formula>
    <label>End Date Today</label>
    <type>Checkbox</type>
</CustomField>