force-app/main/default/objects/Contact_Account_Relation__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <inlineHelpText>Automatically populated based on the Start/End Date.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>