force-app/main/default/objects/Contact_Account_Relation__c/validationRules/Cannot_select_Person_Account_as_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_select_Person_Account_as_Account</fullName>
    <active>true</active>
    <errorConditionFormula>Account__r.RecordType.DeveloperName = &quot;PersonAccount&quot;</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Please select a non-Person Account in the Account field. If you are looking to create a relationship between two people, please create a Contact Contact Relationship record</errorMessage>
</ValidationRule>